feat: add Jitsi token generation and handling in session management
- Updated sessionRoutes to include a new endpoint for generating Jitsi tokens.
- Modified MeetingRoom component to fetch and utilize Jitsi token for secure meetings.
- Implemented room name handling based on session ID and token response.
- Enhanced meeting duration tracking and navigation to review page with actual duration.
- Updated SessionReview component to accept and store the actual duration of the session upon completion.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,3 +5,7 @@ JWT_SECRET=your_jwt_secret_key_change_this
 # Google OAuth
 GOOGLE_CLIENT_ID=your_clients_id_from_google_cloud_console
 GOOGLE_CLIENT_SECRET=your_client_secret_from_google_cloud_console
+
+JAAS_APP_ID=vpaas-magic-cookie-example
+JAAS_API_KEY_ID=key_id_example
+JAAS_PRIVATE_KEY_path=./jaas_private_key.pk
