--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "dev": "vite"
   },
   "dependencies": {
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "@jitsi/react-sdk": "^1.4.4",
     "@radix-ui/react-accordion": "1.2.3",
     "@radix-ui/react-alert-dialog": "1.1.6",
@@ -50,27 +52,18 @@
     "react-router-dom": "^7.13.0",
     "react-slick": "0.31.0",
     "recharts": "2.15.2",
+    "slick-carousel": "^1.8.1",
     "sonner": "2.0.3",
     "tailwind-merge": "3.2.0",
     "vaul": "1.1.2"
   },
   "devDependencies": {
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
     "@tailwindcss/vite": "4.1.12",
     "@vitejs/plugin-react": "4.7.0",
-    "vite": "6.3.5",
-    "tailwindcss": "4.1.12"
-  },
-  "peerDependencies": {
-    "react": "18.3.1",
-    "react-dom": "18.3.1"
-  },
-  "peerDependenciesMeta": {
-    "react": {
-      "optional": true
-    },
-    "react-dom": {
-      "optional": true
-    }
+    "tailwindcss": "4.1.12",
+    "vite": "6.3.5"
   },
   "pnpm": {
     "overrides": {
